--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 md5 = "0.7.0"
 regex = "1.5.4"
 lazy_static = "1.4.0"
+
+[dev-dependencies]
+miette = {features=["fancy"], version="3.2.0"}
