--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ regex = "1.5.4"
 lazy_static = "1.4.0"
 serde = "1.0.131"
 serde_json = "1.0.72"
+itertools = "0.10.3"
+phf = { version = "0.10", features = ["macros"] }
 
 [dev-dependencies]
 miette = {features=["fancy"], version="3.2.0"}
